--- a/CSS/style.css
+++ b/CSS/style.css
@@ -217,14 +217,23 @@ body {
 
 /* Logo - Centro */
 .logo {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     color: white;
     font-size: 1.5rem;
     font-weight: bold;
     text-decoration: none;
     letter-spacing: 1px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    
+}
+
+#logoimage {
+    width: 50%;
+    margin-left: 25%;
+
 }
 
 .logo:hover {
@@ -253,9 +262,7 @@ body {
 
 }
 
-#logoimage {
-    width: 50%;
-}
+
 .login-btn:hover {
     background: #4895ef;
     transform: translateY(-2px);
@@ -410,12 +417,14 @@ body {
     font-size: 2.5rem;
     margin-bottom: 1rem;
     font-weight: 300;
+    color: black;
 }
 
 .hero-subtitle {
     font-size: 1.1rem;
     opacity: 0.9;
     margin-bottom: 2rem;
+    color: black;
 }
 
 .cta-button {
@@ -484,12 +493,15 @@ body {
 }
 
 .modal-flag {
-    width: 24px;
-    height: 24px;
+    width: 3vw;
+    height: 3vh;
     border-radius: 50%;
-    background: linear-gradient(45deg, #000 50%, #ff0000 50%);
     margin-right: 12px;
     position: relative;
+}
+
+#bussolaimage {
+    width: 2.5rem;
 }
 
 .modal-flag::before {
@@ -499,7 +511,6 @@ body {
     left: 0;
     width: 100%;
     height: 50%;
-    background: #ffff00;
 }
 
 .modal-title {
@@ -623,7 +634,7 @@ body {
     padding: 0 1rem;
 }
 
-.twitch-login {
+.google-login {
     width: 100%;
     background: #9146ff;
     color: white;
@@ -642,12 +653,12 @@ body {
     gap: 10px;
 }
 
-.twitch-login:hover {
+.google-login:hover {
     background: #7c3aed;
     border-color: #7c3aed;
 }
 
-.twitch-icon {
+.google-icon {
     font-size: 1.2rem;
 }
 /* Responsivo */
@@ -666,7 +677,7 @@ body {
 
     .login-btn, .signup-btn {
         padding: 6px 12px;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
     }
 
     .hero-title {
@@ -681,4 +692,14 @@ body {
         padding: 1.5rem;
         margin: 1rem;
     }
+
+
+}
+
+@media (max-width: 650px) {
+    #logoimage {
+        margin-left: -30% !important;
+        width: 80%;
+    }
+
 }
