--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,9 +17,12 @@
 }
 
 #dropdownicon {
-    position: absolute;
-    padding-left: 1.8vw;
-    font-size: 50px;
+    width: 125%;
+    margin-top: 0.8vh;
+
+}
+#textIcon {
+    padding-left: 1vw;
 }
 
 #navtitle {
@@ -241,6 +244,9 @@ body {
 }
 
 /* Botões Login/Signup - Direita */
+
+/*Login*/
+
 .auth-buttons {
     display: flex;
     gap: 10px;
@@ -268,6 +274,8 @@ body {
     transform: translateY(-2px);
 }
 
+/*Signup*/
+
 .signup-btn {
     background: transparent;
     color: white;
@@ -288,6 +296,8 @@ body {
     transition: all 0.3s ease;
 }
 
+
+
 /* Offcanvas Sidebar */
 .offcanvas {
     position: fixed;
@@ -295,7 +305,7 @@ body {
     left: -300px;
     width: 300px;
     height: 100vh;
-    background: #2c3e50;
+    background: linear-gradient(to right, #5e39b6, #3a0ca3);
     transition: left 0.3s ease;
     z-index: 1000;
     box-shadow: 2px 0 10px rgba(0,0,0,0.3);
@@ -338,12 +348,17 @@ body {
     padding: 1rem 0;
 }
 
+#imageLogin {
+    width: 25%;
+    margin-bottom: -1.2vh;
+
+}
 .menu-section {
     margin-bottom: 2rem;
 }
 
 .menu-section-title {
-    color: #7f8c8d;
+    color: #b8cacc;
     font-size: 0.8rem;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -493,10 +508,7 @@ body {
 }
 
 .modal-flag {
-    width: 3vw;
-    height: 3vh;
     border-radius: 50%;
-    margin-right: 12px;
     position: relative;
 }
 
