--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,8 +51,6 @@
 
 /*Código Pessoal*/
 
-
-
 .navbar2 {
     display: flex;
     width: 100%;
@@ -219,14 +217,10 @@ body {
 }
 
 /* Logo - Centro */
+
 .logo {
-    color: white;
-    font-size: 1.5rem;
-    font-weight: bold;
-    text-decoration: none;
-    letter-spacing: 1px;
     position: absolute;
-    left: 50%;
+    margin-left: 50%;
     transform: translateX(-50%);
     display: flex;
     align-items: center;
